# postgres

./: meson.build  notice_informix.pgc  notice_oracle.pgc  postgres-aio-documentation.md  postgres-aio-optimization-opportunities.md
doc/src/sgml/: libpq.sgml
src/: test_ecpg.pgc
src/backend/access/common/: Makefile  atomic_visibility.c  meson.build
src/backend/access/transam/: twophase.c
src/backend/replication/logical/: reorderbuffer.c
src/backend/storage/ipc/: procarray.c
src/backend/utils/time/: snapmgr.c
src/include/access/: atomic_visibility.h
src/include/utils/: elog.h  snapshot.h
src/interfaces/ecpg/ecpglib/: execute.c  misc.c
src/interfaces/ecpg/include/: ecpglib.h
src/interfaces/ecpg/preproc/: Makefile  ecpg.addons  meson.build  pgc.l
src/interfaces/ecpg/preproc/t/: 001_ecpg_notice.pl  002_ecpg_notice informix.pl  002_ecpg_notice_informix.pl  notice.pgc
src/interfaces/ecpg/test/: Makefile  ecpg_schedule  ecpg_wrapper.bat  ecpg_wrapper.sh  meson.build  notice_informix.pgc  pg_regress_ecpg.c
src/interfaces/ecpg/test/expected/: ecpg#notice.pgc.stderr  preproc-check_cmd_notice.stdout  preproc-cmd_out.stderr  preproc-cmd_out_infor_mix.c  preproc-cmd_out_informix.c  preproc-cmd_out_informix.stderr  preproc-cmd_out_informix.stdout  preproc-notice_check.stderr  preproc-notice_informix_check.stderr
src/interfaces/ecpg/test/preproc/: Makefile  check_cmd_notice.c  check_cmd_notice_informix.c  check_cmd_notice_util.c  check_cmd_notice_util.h  cmd_out.c  cmd_out_informix.c  cmd_out_util.c  cmd_out_util.h  copy_files.py  meson.build  notice.pgc  notice_check.bat  notice_check.sh  notice_informix.pgc  notice_informix_check.bat  notice_informix_check.sh
src/interfaces/libpq/: fe-connect.c  meson.build
src/interfaces/libpq/t/: 006_service.pl  007_servicefile_opt.pl
src/test/regress/: pg_regress.c  pg_regress.h
